# py-eodms-dds

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: check_version.yml  check_versions.yml  test_pyeodmsdds.yml
eodms_api/: __init__.py  aaa.py  dds.py
eodms_dds/: __init__.py  aaa.py  api_logger.py  config.py  dds.py  log.py  search.py
tests/: _set_db_vars.ps1  _set_vars.ps1  db.py  db_dds_test.py  random_pkg_test.py  rapi_dds_test.py  rnd_pkg_test.py  stac_dds_test.py
