[metadata]
name = py-eodms-api
version = 0.3.0
author = Kevin Ballantyne (Natural Resources Canada)
author_email = kevin.ballantyne@nrcan-rncan.gc.ca
description = EODMS RAPI Client is a Python3 package used to access the AAA and DDS API services provided by the Earth Observation Data Management System (EODMS) from Natural Resources Canada.
description_file = README.md
long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://py-eodms-rapi.readthedocs.io/en/latest/
# project_urls =
# 	Source = https://github.com/eodms-sgdot/py-eodms-rapi
#     Bug Tracker = https://github.com/eodms-sgdot/py-eodms-rapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent